# dinero

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
bindings/: CreateLedgerRequest.ts  Currency.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: Dashboard.tsx  Layout.tsx  Ledger.tsx  index.css  main.tsx
frontend/src/bindings/: Account.ts  AuthStatus.ts  BankFormat.ts  BrokerFormat.ts  CreateLedgerRequest.ts  CreateLedgerResponse.ts  Data.ts  ExtendedLedger.ts  ExtendedLedgerRecord.ts  Format.ts  Ledger.ts  LedgerFile.ts  LedgerFiles.ts  LedgerKind.ts  LedgerMeta.ts  LedgerSummary.ts  ListLedgerResponse.ts  LogoutResponse.ts  Owner.ts  PortfolioLedgerData.ts  PortfolioLedgersData.ts  PortfolioSummaryResponse.ts  SpendPerMonth.ts  SpendingSummary.ts  Symbol.ts  UpdateLedgerRequest.ts  UpdateLedgerResponse.ts
frontend/src/components/: AreaChart.tsx  Checkbox.tsx  Tooltip.tsx
frontend/src/dashboard/: Dashboard.tsx  NetWorth.tsx  SpendBreakdown.tsx  SpendBreakdownTransactions.tsx  SpendOverMonth.tsx
frontend/src/ledger/: LedgerCreate.tsx  LedgerFileView.tsx  LedgerLayout.tsx  LedgerMeta.tsx  LedgerOverview.tsx  LedgerView.tsx
frontend/src/lib/: auth.ts  chartUtils.ts  currency.ts  numbers.ts  routerAuth.ts
portfolio-test/fx/: EUR:CHF.json  USD:CHF.json  USD:USD.json
portfolio-test/ledgers/123456789/: portfolio.yaml
portfolio-test/ledgers/123456789/ibkr/: 2024.csv
portfolio-test/ledgers/123456789/neon/: 2024_account_statements.csv
portfolio-test/ledgers/123456789/revolut/: 2024.csv
portfolio-test/ledgers/123456789/ubs-private/: UBS_test.csv
portfolio-test/ledgers/123456789/wise/: statement_12345_CHF_2024-01-01_2024-12-31.csv  statement_12345_USD_2024-01-01_2024-12-31.csv
src/: app.rs  banks.rs  brokers.rs  cli.rs  error.rs  fx.rs  handler.rs  main.rs  parser.rs  portfolio.rs  processing.rs  state.rs
src/banks/: ibkr.rs  neon.rs  revolut.rs  ubs.rs  wise.rs
src/banks/snapshots/: effect__banks__ibkr__tests__parse.snap  effect__banks__neon__tests__parse_export.snap  effect__banks__revolut__tests__parse_export.snap  effect__banks__ubs__tests__parse.snap  effect__banks__wise__tests__parse_export.snap
src/brokers/: ibkr.rs
src/handler/: auth.rs  index.rs  ledger.rs
src/handler/auth/: login.rs  logout.rs  oidc.rs  status.rs  user.rs
src/handler/ledger/: create.rs  delete.rs  get.rs  list.rs  summary.rs  update.rs
src/handler/ledger/files/: delete.rs  get.rs  post.rs  put.rs
src/handler/portfolio/: get.rs
src/parser/: neon.rs  ubs.rs
src/realms/: portfolio.rs
src/realms/portfolio/: adapter.rs  state.rs
