[package]
name = "effect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo = { package = "yahoo_finance_api", version = "2" }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["serde-human-readable"] }
serde = "1"
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
polars = { version = "0.36", features = [
    "temporal",
    "lazy",
    "csv",
    "parquet",
    "serde",
    "polars-io",
    "polars-ops",
    "cum_agg",
    "strings",
    "dtype-decimal",
    "polars-plan",
    "dtype-date",
] }
polars-core = { version = "0.36", features = ["asof_join", "dtype-date"] }
polars-ops = { version = "0.36", features = ["asof_join"] }
polars-plan = { version = "0.36", features = ["regex"] }
clap = { version = "4", features = ["derive"] }
reqwest = "0.12.2"
dotenv = "0.15"
slug = "0.1.5"
float-cmp = "0.9"
