[package]
name = "effect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "*"
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json"] }
dotenv = "0.15"
slug = "0.1.5"
float-cmp = "0.9"
ts-rs = { version = "8.1", features = ["serde-compat"] }
itertools = "0.12.1"
chrono = { version = "0.4.37", features = ["serde"] }

[dev-dependencies]
insta = { version = "*" }
